--- a/scripts/molecular-bodies/molecular-bodies.ipynb
+++ b/scripts/molecular-bodies/molecular-bodies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "e28cbd2e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "22d7a4f1",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "1b69e34b",
    "metadata": {},
    "outputs": [],
@@ -81,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "04e65666",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mscf = pyscf.scf.RHF(molecule)"
+    "mf = pyscf.scf.RHF(molecule)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "0fe73c66",
    "metadata": {},
    "outputs": [
@@ -99,22 +99,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged SCF energy = -154.01055305808\n"
+      "converged SCF energy = -154.010553058081\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-154.01055305808012"
+       "-154.01055305808052"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mscf.scf()"
+    "mf.scf()"
    ]
   },
   {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7211e41e",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "        [ 1.64792636e-03,  1.72606881e-03,  1.80674801e-03, ...,\n",
        "          6.45985282e-03,  6.40315403e-03,  6.34492999e-03],\n",
        "        ...,\n",
-       "        [-3.86634071e-05, -2.19935679e-06,  3.56977249e-05, ...,\n",
+       "        [-3.86634072e-05, -2.19935679e-06,  3.56977249e-05, ...,\n",
        "          2.64165086e-03,  2.63533466e-03,  2.62794390e-03],\n",
        "        [-6.66951286e-05, -3.16784567e-05,  4.68628678e-06, ...,\n",
        "          2.54744165e-03,  2.54244938e-03,  2.53641085e-03],\n",
@@ -221,7 +221,7 @@
        "          2.45575991e-03,  2.45200803e-03,  2.44723913e-03]]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,14 +230,22 @@
     "ed_cube = xyz_file.split(\".\")[0] + \".ed.cube\"\n",
     "mep_cube = xyz_file.split(\".\")[0] + \".mep.cube\"\n",
     "\n",
-    "cubegen.density(mol, ed_cube, mf.make_rdm1())\n",
-    "cubegen.mep(mol, mep_cube, mf.make_rdm1())"
+    "cubegen.density(molecule, ed_cube, mf.make_rdm1())\n",
+    "cubegen.mep(molecule, mep_cube, mf.make_rdm1())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9cdc8bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "657e11fa",
    "metadata": {},
    "outputs": [],
    "source": []
